Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61951

Weird behavior when moving items in QListView icon mode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10.0 Alpha
    • 5.6, 5.7, 5.8, 5.9
    • Widgets: Itemviews
    • None

    Description

      When items are moved in QListView icon mode, the drop action is toggled on every mouse move - it is accepted and then ignored, etc.

       

      Steps to reproduce:

      • compile and run attached software,
      • drag item to another position - on every movement the action is changed (ignored, accepted, etc.).

      Attachments

        For Gerrit Dashboard: QTBUG-61951
        # Subject Branch Project Status CR V

        Activity

          People

            richard Richard Moe Gustavsen
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes